@@ -244,6 +244,15 @@ fi
 
 AM_CONDITIONAL(WITH_CHILLIREDIR, [test x"$enable_chilliredir" = xyes])
 
+AC_ARG_ENABLE(ieee8023, [AC_HELP_STRING([--enable-ieee8023],[Enable support for IEEE 802.3 Ethernet])], 
+  enable_ieee8023=$enableval, enable_ieee8023=no)
+
+if test x"$enable_ieee8023" = xyes; then
+   AC_DEFINE(ENABLE_IEEE8023,1,[Define to enable IEEE 802.3])
+fi
+
+AM_CONDITIONAL(WITH_IEEE8023, [test x"$enable_ieee8023" = xyes])
+
 AC_ARG_ENABLE(pppoe, [AC_HELP_STRING([--enable-pppoe],[Enable support for PPPoE])], 
   enable_pppoe=$enableval, enable_pppoe=no)
 
